<resources>
    <string name="app_name">FunnyChat</string>

    <string name="action_settings">设置</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="text_username">账 号 </string>
    <string name="hint_input_username">请输入账号</string>
    <string name="text_password">密 码</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="text_login">登 陆</string>
    <string name="text_newuser">新用户</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="text_nickname">昵 称</string>
    <string name="hint_input_nickname">请输入昵称</string>
    <string name="hint_repassword">请确认密码</string>
    <string name="text_register">注 册</string>
    <string name="title_activity_main">MainActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_chat">会话</string>
    <string name="text_contact">关系</string>
    <string name="openDrawer">open</string>
    <string name="closeDrawer">close</string>
    <string name="text_setting">设置</string>
    <string name="text_notification">通知</string>
    <string name="text_about">关于</string>
    <string name="title_activity_private_conversation">PrivateConversationActivity</string>
    <string name="title_activity_conversation">ConversationActivity</string>
    <string name="action_add">添加</string>
    <string name="action_notify">通知</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="hint_search_user">请输入对方用户名</string>
    <string name="text_add_contact">添加联系人</string>
    <string name="hint_input_groupId">请输入群ID</string>
    <string name="text_add_group">加入联系群</string>
    <string name="title_activity_create_group">CreateGroupActivity</string>
    <string name="hint_limit">字母或数字(不超过16位)</string>
    <string name="text_create">创建</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_notify">NotifyActivity</string>
</resources>
