<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mummyding.app.funnychat.Aty.MainActivity">
    <item android:id="@+id/action_add" android:title="@string/action_add"
        android:icon="@mipmap/ic_add"
        android:orderInCategory="90" app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_notify" android:title="@string/action_notify"
        android:icon="@mipmap/ic_notify"
        android:orderInCategory="90" app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:icon="@mipmap/ic_setting"
        android:orderInCategory="100" app:showAsAction="ifRoom" />
</menu>
