<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar"></include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        >
        <EditText
            android:id="@+id/et_username"
            android:hint="@string/hint_search_user"
            android:layout_weight="1"
            android:layout_width="@dimen/width_inputbox"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:maxLength="16"
            android:singleLine="true"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            />
        <Button
            android:id="@+id/btn_add_contact"
            android:text="@string/text_add_contact"
            android:textSize="@dimen/size_text"
            android:textColor="@color/ColorText"
            android:background="@color/ColorPrimary"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_width="@dimen/width_btn"
            android:layout_height="@dimen/height_btn" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/et_groupId"
            android:hint="@string/hint_input_groupId"
            android:layout_weight="1"
            android:layout_width="@dimen/width_inputbox"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:maxLength="16"
            android:singleLine="true"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            />
        <Button
            android:id="@+id/btn_addGroup"
            android:text="@string/text_add_group"
            android:textSize="@dimen/size_text"
            android:textColor="@color/ColorText"
            android:background="@color/ColorPrimary"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_width="@dimen/width_btn"
            android:layout_height="@dimen/height_btn" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/imgbtn_createGroup"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:scaleType="fitXY"
        android:src="@drawable/register"
        android:background="@drawable/circle"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="right|bottom" />
</LinearLayout>
